Task4_IstioServiceMesh/task4c_canary_deployments/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: javaservicemeshgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "localhost.127.0.0.1.sslip.io"
