Task4_IstioServiceMesh/task4c_canary_deployments/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: javawebappvirtualsvc
spec:
  hosts:
    # - javaservicemeshgateway.default.svc.cluster.local
    # - "*"
    - "myapp.127.0.0.1.sslip.io"      #!domain name for localhost directly
  gateways:
    - javaservicemeshgateway
  http:
  - route:
    - destination:
        # host: jwappsvcv1.default.svc.cluster.local
        host: jwappsvcv1
        subset: v1
      weight: 80
    - destination:
        # host: jwappsvcv2.default.svc.cluster.local
        host: jwappsvcv2
        subset: v2
      weight: 20
